2005-01-31  Roger Sayle  <roger@eyesopen.com> 	    Dale Johannesen  <dalej@apple.com>

PR middle-end/19650
	* fold-const.c (fold_binary_op_with_conditional_arg):
	Make types match original operands, before STRIP_NOPS.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@94485 138bc75d-0d04-0410-961f-82ee72b054a4